<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_mapa_inicial"
    android:padding="45dp"
    tools:context=".MainActivity">

        <TextView
            android:id="@+id/title_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_cenario"
            android:fontFamily="@font/signika_bold"
            android:textSize="35sp"
            android:textColor="@color/azulPrincipal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="130dp"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_maps_calor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Button"
            android:text="@string/title_maps_calor"
            app:layout_constraintTop_toBottomOf="@+id/title_main"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_regioes_saude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Button"
            android:text="@string/title_regioes_saude"
            app:layout_constraintTop_toBottomOf="@+id/bt_maps_calor"
            android:layout_marginTop="20dp"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_formacoes_tecnica"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Button"
            android:text="@string/title_formacoes_tecnica"
            app:layout_constraintTop_toBottomOf="@+id/bt_regioes_saude"
            android:layout_marginTop="20dp"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_qualificacoes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Button"
            android:text="@string/title_qualificacao"
            app:layout_constraintTop_toBottomOf="@+id/bt_formacoes_tecnica"
            android:layout_marginTop="20dp"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:layout_marginTop="60dp"
            android:src="@drawable/logo_esp_ses1"
            app:layout_constraintTop_toBottomOf="@+id/bt_qualificacoes"
            app:layout_constraintStart_toStartOf="@+id/bt_qualificacoes"
            app:layout_constraintEnd_toEndOf="@+id/bt_qualificacoes"
            tools:ignore="MissingConstraints"/>

</androidx.constraintlayout.widget.ConstraintLayout>