<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_2"
    android:padding="40dp"
    tools:context=".maps_teste1">

    <ImageView
        android:id="@+id/bt_voltar_mapas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_voltar"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/title_mapa_calor_pg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_mapa_calor"
        android:layout_marginTop="30sp"
        android:fontFamily="@font/signika_bold"
        android:textSize="35sp"
        android:textColor="@color/azulPrincipal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subtitle_mapa_calor_pg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/subtitle_mapa_calor"
        android:fontFamily="@font/signika_light"
        android:textSize="15sp"
        android:textColor="@color/azulPrincipal"
        app:layout_constraintTop_toBottomOf="@+id/title_mapa_calor_pg"
        app:layout_constraintStart_toStartOf="@+id/title_mapa_calor_pg"
        app:layout_constraintEnd_toEndOf="@+id/title_mapa_calor_pg"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/regiao_alta"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/layout_regiao_alta"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/subtitle_mapa_calor_pg"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/subtitle_regiao_alta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/signika_light"
        android:text="@string/alta"
        android:textColor="@color/azulPrincipal"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/regiao_alta"
        app:layout_constraintTop_toBottomOf="@+id/subtitle_mapa_calor_pg"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/regiao_media"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/layout_regiao_media"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/regiao_alta"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/subtitle_regiao_media"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/signika_light"
        android:text="@string/media"
        android:textColor="@color/azulPrincipal"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/regiao_alta"
        app:layout_constraintTop_toBottomOf="@+id/subtitle_regiao_alta"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/regiao_baixa"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/layout_regiao_baixa"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/regiao_media"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/subtitle_regiao_baixa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="17dp"
        android:fontFamily="@font/signika_light"
        android:text="@string/baixa"
        android:textColor="@color/azulPrincipal"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/regiao_alta"
        app:layout_constraintTop_toBottomOf="@+id/subtitle_regiao_media"
        tools:ignore="MissingConstraints" />

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        tools:context=".maps_teste1"
        app:layout_constraintTop_toBottomOf="@+id/regiao_baixa"
        android:layout_marginTop="30sp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/subtitle_atualizacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:fontFamily="@font/signika_light"
        android:text="@string/atualizacao"
        android:textColor="@color/azulPrincipal"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/regiao_alta"
        app:layout_constraintTop_toBottomOf="@+id/map"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>